<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/locker_gray_bg"
    tools:context=".ui.deliveryDetailsFragment.DeliveryDetailsFragment">

    <RelativeLayout
        android:id="@+id/header_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/locker_theme_color">

        <ImageView
            android:id="@+id/delivery_locker_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="412dp"
            android:maxHeight="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/locker_logo" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/delivery_details_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/locker_padding_40"
        android:layout_marginStart="@dimen/locker_padding_40"
        app:layout_constraintTop_toBottomOf="@id/header_logo_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/backarrow"/>

    <TextView
        android:id="@+id/delivery_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_logo_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/roboto"
        android:textColor="@color/locker_black"
        android:textFontWeight="600"
        android:textSize="34sp"
        android:layout_marginTop="@dimen/locker_padding_40"
        tools:text="DELIVERY DETAILS"/>

    <TextView
        android:id="@+id/delivery_details_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/delivery_details_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/inter"
        android:layout_marginTop="@dimen/locker_padding_10"
        android:textColor="@color/locker_black"
        android:textSize="24sp"
        tools:text="Enter the Delivery Detail below to Deliver Package"/>

    <LinearLayout
        android:id="@+id/public_apartment_locker_image_layout"
        app:layout_constraintTop_toBottomOf="@id/delivery_details_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/public_locker_image"
            android:layout_width="500dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@id/delivery_details_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/publiclocker">
        </ImageView>

        <ImageView
            android:id="@+id/apartment_locker_image"
            android:layout_width="500dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@id/delivery_details_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/apartmentimage">
        </ImageView>

    </LinearLayout>

    <TextView
        android:id="@+id/apartment_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/public_apartment_locker_image_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:fontFamily="@font/inter"
        android:textColor="@color/locker_black"
        android:layout_marginTop="@dimen/locker_padding_10"
        android:layout_marginBottom="@dimen/locker_padding_10"
        android:text="Central Park Apartments,Lekki Phase I">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/packages_size_autoComplete_layout"
        android:layout_width="510dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/apartment_address"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/locker_padding_20"
        android:layout_marginStart="60dp"
        app:boxBackgroundColor="@color/locker_white_color"
        app:boxStrokeColor="@color/locker_white_color"
        android:background="@color/locker_white_color">
        
        <AutoCompleteTextView
            android:id="@+id/packages_size_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:backgroundTint="@color/locker_white_color"
            android:background="@color/locker_white_color"
            android:text="@string/select_package_size">
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/courier_autoComplete_layout"
        android:layout_width="510dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/apartment_address"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="@dimen/locker_padding_20"
        app:boxBackgroundColor="@color/locker_white_color"
        app:boxStrokeColor="@color/locker_white_color"
        android:background="@color/locker_white_color">

        <AutoCompleteTextView
            android:id="@+id/courier_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:backgroundTint="@color/locker_white_color"
            android:background="@color/locker_white_color"
            android:text="@string/select_courier">
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unit_number_autoComplete_layout"
        android:layout_width="510dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/packages_size_autoComplete_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/locker_padding_20"
        app:boxBackgroundColor="@color/locker_white_color"
        app:boxStrokeColor="@color/locker_white_color"
        android:background="@color/locker_white_color">

        <AutoCompleteTextView
            android:id="@+id/unit_number_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:backgroundTint="@color/locker_white_color"
            android:background="@color/locker_white_color"
            android:text="@string/select_unit_number">
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/other_courier"
        android:layout_width="510dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/courier_autoComplete_layout"
        app:layout_constraintStart_toStartOf="@+id/courier_autoComplete_layout"
        android:layout_marginTop="@dimen/locker_padding_20"
        android:background="@color/locker_white_color"
        android:hint="@string/enter_new_courier"
        android:visibility="gone"
        android:layout_marginEnd="60dp">
    </EditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/unit_number_autoComplete_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button_blue_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="40dp"
        style="?Locker_blue_bg_button"
        android:textColor="@color/locker_white_color"
        android:gravity="center"
        app:backgroundTint="@null"
        android:text="@string/continue_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>